
Sun Jun  7 00:19:22 EDT 1998  Adrian Likins <adrian@gimp.org>

	* app/commands.c: Reworked the file_new dialog to
	be a little more useful. Added entries for a height
	and width in the unit of your choice, and a resolution.
	Not everythings hooked up yet, but its getting there.

Sun Jun  7 00:22:01 EDT 1998  Matthew Wilson  <msw@gimp.org>

	* app/interface.c: Register private tips for all the tools -
	for use with online help later

Sat Jun  6 16:12:20 PDT 1998 Manish Singh <yosh@gimp.org>

	* adding Lighting plugin

	* updated despeckle, png, sgi, and sharpen

Sat Jun  6 14:22:19 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/interface.c: changed it back, things work now

	* plug-ins/gfli/gfli.c: fixed gccism

	* plug-ins/MapObject/mapobject_main.c: update display when
	we're done (from seth)

Sat Jun  6 04:00:04 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/interface.c: changed GDK_IMAGE_NORMAL to GDK_IMAGE_SHARED
	to workaround gtk bug

Fri Jun  5 22:37:40 1998  Owen Taylor  <otaylor@gtk.org>

	* app/Makefile.am app/app_procs.c app/brushes.c app/commands.[ch]
	  app/disp_callbacks.c app/gdisplay.[ch] app/gimprc.c
	  app/interface.[ch] app/menus.c app/paint_core.[ch]
	  app/paintbrush.c app/palette.c app/scroll.c
	  app/tools.[ch] app/undo.c

	- Added two new dialogs - input devices; (GtkInputDialog)
	  and DeviceStatus - which shows the tool/color for
	  each device.

	- Added device_status_update() call that gets called
	  whenever the tool/color etc. are changed.

	- Added ~/.gimp/devicerc file to store settings

	- Code to draw cursor on canvas for non XFree86 XInput
	  where device can't control cursor and extended input
	  device simultaneously.

	- Changed input handling so that we always use the pointer
	  position from the device, not from gdk_input_window_get_cursor,
	  so that motion and cursor position sync.

	- Various changes so things work with non-integer coordinates

	- Pay attention to pressure and tilt in basic tool support.
